openshift/cosas/ocp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaime
spec:
  selector:
    matchLabels:
      app: jaime
  replicas: 1
  template:
    metadata:
      labels:
        app: jaime
    spec:
      containers:
        - name: jaime
          image: 'ghcr.io/jaime-project/jaime:1.6.35'
          ports:
            - containerPort: 5000

---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: jaime-agent-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-openshift
  template:
    metadata:
      labels:
        app: jaime-agent-openshift
    spec:
      containers:
        - name: jaime-agent-openshift
          image: 'ghcr.io/jaime-project/jaime-agent-openshift:1.6.35'
          ports:
            - name: agent
              containerPort: 7001
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: jaime-agent-openshift
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10

---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: jaime-agent-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-kubernetes
  template:
    metadata:
      labels:
        app: jaime-agent-kubernetes
    spec:
      containers:
        - name: jaime-agent-kubernetes
          image: 'ghcr.io/jaime-project/jaime-agent-kubernetes:1.6.35'
          ports:
            - name: agent
              containerPort: 7001
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: jaime-agent-kubernetes
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10

---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: jaime-agent-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-base
  template:
    metadata:
      labels:
        app: jaime-agent-base
    spec:
      containers:
        - name: jaime-agent-base
          image: 'ghcr.io/jaime-project/jaime-agent:1.6.35'
          ports:
            - name: agent
              containerPort: 7001
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: jaime-agent-base
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10

---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: jaime-agent-pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-pushgateway
  template:
    metadata:
      labels:
        app: jaime-agent-pushgateway
    spec:
      containers:
        - name: jaime-agent-base
          image: 'ghcr.io/jaime-project/jaime-agent-pushgateway:1.6.35'
          ports:
            - name: agent
              containerPort: 7001
              protocol: TCP
            - name: gateway
              containerPort: 9091
              protocol: TCP              
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: jaime-agent-pushgateway
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaime-front
spec:
  selector:
    matchLabels:
      app: jaime-front
  replicas: 1
  template:
    metadata:
      labels:
        app: jaime-front
    spec:
      containers:
        - name: jaime-front
          image: 'ghcr.io/jaime-project/jaime-front:1.6.35'
          ports:
            - containerPort: 8080
  
---

apiVersion: v1
kind: Service
metadata:
  name: jaime
spec:
  selector:
    app: jaime
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-agent-openshift
  labels:
    app: jaime-agent-openshift
spec:
  ports:
  - port: 7001
    name: agent
  clusterIP: None
  selector:
    app: jaime-agent-openshift

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-agent-kubernetes
  labels:
    app: jaime-agent-kubernetes
spec:
  ports:
  - port: 7001
    name: agent
  clusterIP: None
  selector:
    app: jaime-agent-kubernetes

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-agent-base
  labels:
    app: jaime-agent-base
spec:
  ports:
  - port: 7001
    name: agent
  clusterIP: None
  selector:
    app: jaime-agent-base

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-agent-pushgateway
  labels:
    app: jaime-agent-pushgateway
spec:
  ports:
  - port: 7001
    name: agent
  - port: 9091
    name: pushgateway
  clusterIP: None
  selector:
    app: jaime-agent-pushgateway    

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-front
spec:
  selector:
    app: jaime-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: jaime-front

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaime-front
spec:
  to:
    kind: Service
    name: jaime-front
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
  
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaime
spec:
  to:
    kind: Service
    name: jaime
    weight: 100
  port:
    targetPort: 5000
  wildcardPolicy: None
